feat: user signup and authenticate with username and password
