# app/models/user.rb
@@ -4,17 +4,18 @@ class User < ApplicationRecord
   
   VALID_EMAIL_REGEX = /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i
   
-  validates_presence_of :email, :city, :username
+  validates_presence_of :email, :city, :username, :firstname, :lastname
   validates :email, format: { with: VALID_EMAIL_REGEX },
                     uniqueness: { case_sensitive: false }
   validates :username, length: {in: 3..16}, uniqueness: { case_sensitive: false }
-  
+
+  has_secure_password
   
   def all_appointments
     appointments
       .joins('INNER JOIN users ON users.id = appointments.user_id
             INNER JOIN doctors on doctors.id = appointments.doctor_id')
-      .select('users.username, users.email,
+      .select('users.username, users.email,users.firstname, users.lastname,
             doctors.firstname as doctor_firstname,
             doctors.lastname as doctor_lastname,
             doctors.email as doctor_email,
